--- a/Resume.html
+++ b/Resume.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="suruthi.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="jayasuruthi.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Jayasuruthi S</h1>
             <p>Am computer science student </p>
         </div>
